test/types/void/void-formal-1.good
void-formal-1.chpl:1: error: Formal 'x' cannot be declared 'void'. Consider using 'nothing' instead.
