test/types/void/void-formal-1.chpl
proc f(x : void) {
}

f(1);
